# assistant_bot

./: .gitignore  README.md  pyproject.toml
assistant_bot/: __main__.py  cli.py  commands.py  decorators.py  exceptions.py  load_sample.py  suggest_command.py
assistant_bot/address_book/: commands.py  store.py
assistant_bot/note_book/: commands.py  store.py
assistant_bot/samples/: notes.json
samples/: contacts.json
src/: cli.py  commands.py  decorators.py  exceptions.py  load_sample.py  models.py  sample_data.py  store.py  suggest_command.py
src/address_book/: commands.py  models.py  store.py
src/note_book/: commands.py  models.py  store.py
