[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-bot"
version = "1.0.0"
description = "A personal assistant CLI bot for managing contacts and notes"
requires-python = ">=3.9"
dependencies = [
    "rapidfuzz>=3.0.0",
]

[project.scripts]
assistant-bot = "assistant_bot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["assistant_bot*"]

[tool.setuptools.package-data]
assistant_bot = ["samples/*.json"]
